strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-apps
spec:
  stripPrefix:
    prefixes:
      - /app1
      - /app2
